--- a/admin/include/header.phtml
+++ b/admin/include/header.phtml
@@ -411,6 +411,11 @@
 									</li>
 								</ul>
 							</li>
+							<li <% if InStr(current_menu,"backoffice_faq") then%>class="active"<% end if %>>
+								<a href="backoffice_faq.phtml" class="nav-link">
+									<i class="icon-settings"></i> FAQs
+								</a>
+							</li>
 							<!--
 							<li class="dropdown-submenu <% if InStr(current_menu,"backoffice_request_") then%>active<% end if %>">
 								<a href="javascript:;" class="nav-link nav-toggle ">
