--- a/admin/api/sp_design_staticblocks_update.phtml
+++ b/admin/api/sp_design_staticblocks_update.phtml
@@ -1,3 +1,8 @@
+<%response.Expires=-1%>
+<%
+	Response.CodePage = 65001
+	Response.CharSet = "UTF-8"
+%>
 <!-- #INCLUDE File="../local/local.phtml" -->
 <!-- #INCLUDE File="../util/xt_func_util.phtml" -->
 <!-- #INCLUDE File="../util/xt_func_string.phtml" -->
